Major updates, posting to be live

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,6 +22,5 @@ main:
   url: /#why-would-my-parents-care
 
 - title: "How Can I Get Involved"
-  url: /#about-a-physics-degree
-
+  url: /#how-to-get-involved
 
